z-index fix

--- a/Assets/Styles/Custom.css
+++ b/Assets/Styles/Custom.css
@@ -155,5 +155,5 @@ input::selection {
 }
 
 .z-inf {
-  z-index:100;
+  z-index:110;
 }
